# attractor-states

./: analyze_attractors.py  attractor_evidence.md  attractor_table_v2.md  attractor_test.py  attractor_verification_report.md  cross_model_test.py  detailed_verification.py  final_report.py  olmo_local.py  pyproject.toml  run_31_instruct.sh  run_32b_pipeline.sh  run_32b_sft_dpo.sh  run_all_32b_nothink.sh  run_batch.py  run_olmo3_32b_sft_1lr.sh  run_olmo3_32b_sft_extra_seeds.sh  run_olmo3_32b_sft_sweep.sh  run_resume_sweep.sh  run_rlvr_sweep.sh  run_sft_sweep.sh  run_think_nothink_sweep.sh  sky.yaml  user_roleplay_test.py  verify_attractors.py  weird_convo.json
results/: all_transcripts.json
results/anthropic_claude-opus-4.5/: analysis.json  conversations.json  key_transcripts.json
results/anthropic_claude-opus-4.6/: analysis.json  conversations.json
results/anthropic_claude-opus-4.6_20260205_110904/: analysis.json  conversations.json
results/anthropic_claude-sonnet-4.5/: analysis.json  conversations.json
results/anthropic_claude-sonnet-4.5_20260211_235847/: analysis.json  conversations.json
results/arcee-ai_trinity-large-preview_free/: analysis.json  conversations.json
results/cross_claude-opus-4.6_vs_gemini-3-flash-preview/: conversations.json
results/cross_claude-sonnet-4.5_vs_gpt-5.2/: conversations.json
results/cross_claude-sonnet-4.5_vs_grok-4.1-fast/: conversations.json
results/cross_grok-4.1-fast_vs_deepseek-v3.2/: conversations.json
results/cross_grok-4.1-fast_vs_gpt-5.2/: conversations.json
results/deepseek_deepseek-v3.2/: analysis.json  (+1 more)
(+87 files in other folders)
